--- a/client/GymBros/src/index.css
+++ b/client/GymBros/src/index.css
@@ -10,6 +10,7 @@
       --chart-3: 197 37% 24%;
       --chart-4: 43 74% 66%;
       --chart-5: 27 87% 67%;
+      --muted-foreground: 240 3.8% 45%;
     }
   
     .dark {
@@ -18,5 +19,11 @@
       --chart-3: 30 80% 55%;
       --chart-4: 280 65% 60%;
       --chart-5: 340 75% 55%;
+      --muted-foreground: 240 3.8% 45%;
     }
   }
+
+  .body{
+    overflow:hidden
+}  
+  
